# scadview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pyright.ci.json  pyrightconfig.json  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
docs/: about.md  api.md  create_mesh.md  examples.md  index.md  tutorial.md  user_interface.md
examples/: colors.py  cube_minus_sphere.py  heart_vase.py  invalid_code_2.py  koch_snowflake_vase.py  ladybug.py  lego.py  linear_extrude.py  mobius.py  mushroom.py  rings.py  shower_handle_shim.py  spice_rack.py  star_linear_extrude.py  surface_bend.py  text.py  toothbrush_holder.py  toothbrush_holder_2.py  xyz.py  xyz_cube.py
scripts/: format.sh  lint.sh  serve_docs.sh  sync_docs_versions.sh  test.sh  type.sh
src/meshsee/: __init__.py  __main__.py  app.py  camera.py  controller.py  font.py  fonts.py  gl_ui.py  gl_widget_adapter.py  label_atlas.py  label_metrics.py  logconfig.py  logging_main.py  logging_worker.py  main_window.py  mesh_loader.py  mesh_loader_process.py  moderngl_widget.py  module_loader.py  number_texture.py  observable.py  program_updater.py  renderer.py  scene_metrics.py  shader_program.py  surface.py  text_builder.py
src/meshsee/api/: colors.py  linear_extrude.py  surface.py  text_builder.py  utils.py
src/meshsee/render/: camera.py  gl_widget_adapter.py  label_atlas.py  label_metrics.py  label_renderee.py  renderee.py  renderer.py  shader_program.py  trimesh_renderee.py
src/meshsee/resources/: xyz_cube.py
src/meshsee/resources/shaders/: fragment_main.glsl  gnomon_fragment.glsl  gnomon_vertex.glsl  main_fragment.glsl  main_vertex.glsl
src/meshsee/shaders/: fragment.glsl  fragment_num.glsl  label_fragment.glsl  label_vertex.glsl  vertex.glsl  vertex_num.glsl
src/meshsee/ui/: font_dialog.py  gl_ui.py  main_window.py  mesh_handler.py  moderngl_widget.py  splash.py  splash_window.py
src/meshsee/ui/wx/: action.py  font_dialog.py  gl_ui.py  gl_widget.py  main_frame.py  moderngl_widget.py
src/scadview/: __init__.py  __main__.py  logging_main.py  logging_worker.py  mesh_loader_process.py  module_loader.py
src/scadview/api/: text_builder.py
src/scadview/ui/: splash.py
src/scadview/ui/wx/: gl_widget.py
tests/: conftest.py  test_app.py  test_camera.py  test_fonts.py  test_gl_ui.py  test_logging_main.py  test_logging_worker.py  test_mesh_loader.py  test_mesh_loader_process.py  test_module_loader.py  test_observable.py  test_renderer.py  test_scene_metrics.py  test_shader_program.py  test_surface.py  test_text_builder.py
tests/api/: test_linear_extrude.py  test_surface.py  test_text_builder.py
tests/render/: test_camera.py  test_label_metrics.py  test_renderer.py  test_shader_program.py  test_span.py  test_trimesh_renderee.py
tests/renderee/: test_trimesh_renderee.py
tests/ui/: test_gl_ui.py  test_main_window.py
tutorial/: golf_ball_step_05.py  golf_ball_step_06.py  golf_ball_step_07.py  golf_ball_step_08.py  golf_ball_step_09.py  golf_ball_step_10.py
