[project]
name = "meshsee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Neil Lamoureux", email = "neil.lamoureux@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "manifold3d==3.*",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
    "moderngl>=5.12.0",
    "numpy==2.*",
    "pillow>=11.2.1",
    "pyright>=1.1.401",
    "pyrr>=0.10.3",
    "pyside6==6.*",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "trimesh>=4.6.1",
]

[project.scripts]
meshsee = "meshsee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "meshsee",
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.9.2",
]

[tool.uv.sources]
meshsee = { workspace = true }

[tool.pyright]
include = ["src"]
exclude = [".venv", ".git", "**/__pycache__", "build", "dist"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

# Treat "unknown"/"untyped" as errors
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "none"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Everything correctness-related stays strict
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportPrivateUsage = "warning"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidTypeVarUse = "error"
reportMissingTypeArgument = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalCall = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportCallIssue = "error"
reportGeneralTypeIssues = "error"
reportMatchNotExhaustive = "error"
reportUninitializedInstanceVariable = "warning"
reportUnboundVariable = "error"

# Ignore missing type stubs
reportMissingTypeStubs = "none"

# Hygiene
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryCast = "warning"
reportImplicitStringConcatenation = "warning"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true

# [tool.pyright.executionEnvironments]
# 0.root = "src"
# 0.pythonVersion = "3.11"

# 1.root = "tests"
# # keep tests strict too, but you can flip to "basic" if needed:
# 1.typeCheckingMode = "basic"
