[project]
name = "meshsee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Neil Lamoureux", email = "neil.lamoureux@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "manifold3d==3.*",
    "matplotlib>=3.10.3",
    "moderngl>=5.12.0",
    "numpy==2.*",
    "pillow>=11.2.1",
    "pyright>=1.1.401",
    "pyrr>=0.10.3",
    "pyside6==6.*",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "trimesh>=4.6.1",
    "wxpython>=4.2.3",
]

[project.scripts]
meshsee = "meshsee:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "meshsee",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python>=1.18.2",
    "pyright>=1.1.407",
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.9.2",
]

[tool.uv.sources]
meshsee = { workspace = true }

[tool.pyright]
include = ["src/meshsee"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

# Treat "unknown"/"untyped" as errors
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "none"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Everything correctness-related stays strict
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportPrivateUsage = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidTypeVarUse = "error"
reportMissingTypeArgument = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalCall = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportCallIssue = "error"
reportGeneralTypeIssues = "error"
reportMatchNotExhaustive = "error"
reportUninitializedInstanceVariable = "none"
reportUnboundVariable = "error"

# Ignore missing type stubs
reportMissingTypeStubs = "none"

# Hygiene
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportImplicitStringConcatenation = "error"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
