[project]
name = "scadview"
version = "0.2.6" # x-release-please-version
description = "A viewer for 3D meshes and constructive solid geometry (CSG) models."
readme = "README.md"
authors = [{ name = "Neil Lamoureux", email = "neil.lamoureux@gmail.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "manifold3d==3.*",
    "matplotlib>=3.10.3",
    "moderngl>=5.12.0",
    "numpy==2.*",
    "pillow>=11.2.1",
    'pyobjc-framework-Cocoa; platform_system == "Darwin"',
    "pyrr>=0.10.3",
    "scipy>=1.16.1",
    "shapely>=2.1.1",
    "trimesh>=4.6.1",
    "wxpython>=4.2.4",
]

[project.scripts]
scadview = "scadview:main"

[project.urls]
Homepage = "https://scadview.org"
Documentation = "https://scadview.org"
Repository = "https://github.com/neillamoureux/scadview"
Issues = "https://github.com/neillamoureux/scadview/issues"
Changelog = "https://github.com/neillamoureux/scadview/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "click==8.2.1",
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-include-markdown-plugin>=7.2.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.6.22",
    "mkdocstrings-python>=1.18.2",
    "pymdown-extensions>=10.16.1",
    "pyright>=1.1.407",
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.2",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
scadview = { workspace = true }

[tool.pyright]
include = ["src/scadview"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

# Treat "unknown"/"untyped" as errors
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportUnknownMemberType = "none"
reportUntypedFunctionDecorator = "error"
reportUntypedClassDecorator = "error"
reportUntypedBaseClass = "error"
reportUntypedNamedTuple = "error"

# Everything correctness-related stays strict
reportMissingImports = "error"
reportMissingModuleSource = "error"
reportPrivateUsage = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidTypeVarUse = "error"
reportMissingTypeArgument = "error"
reportOptionalMemberAccess = "error"
reportOptionalSubscript = "error"
reportOptionalCall = "error"
reportReturnType = "error"
reportAssignmentType = "error"
reportCallIssue = "error"
reportGeneralTypeIssues = "error"
reportMatchNotExhaustive = "error"
reportUninitializedInstanceVariable = "none"
reportUnboundVariable = "error"

# Ignore missing type stubs
reportMissingTypeStubs = "none"

# Hygiene
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDuplicateImport = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportImplicitStringConcatenation = "error"

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
